# daesynom

./: .gitignore  pyproject.toml
daeasynom/: __main__.py  client.py  server.py  utils.py
daeasynom/client/: __init__.py  __main__.py
daeasynom/pool/: __main__.py  meta.py  pool.py  thread.py
daeasynom/server/: __init__.py  __main__.py  worker.py
